--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/06/26 MicroTESK 2.4.27 beta
+ - Improved support for sections in test templates (constructs section {},
+   section_data {}, section_text{})
+
 2017/06/09 MicroTESK 2.4.26 beta
  - Bug fixes and general improvements
 
