--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,14 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/08/15 MicroTESK 2.4.32 beta
+
+ - Support for revisions in nML and MMU specifications
+ - Integration of multiple generation engines
+ - Test template demonstrating how to mix ALU, BPU and MMU constraints
+   in a single sequence (miniMIPS)
+ - Bug fixes and general improvements
+
 2017/08/03 MicroTESK 2.4.31 beta
 
  - Test template demonstrating how to mix BPU and ALU constraints (miniMIPS)
