--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,14 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/08/25 MicroTESK 2.4.33 beta
+
+ - Support for configuration files describing relations between revisions
+ - Support for operation templates in nML
+ - Supported new nML operators: is_type, type_of, and size_of
+ - Support for bitfields in MMU constraints (test templates)
+ - Bug fixes and general improvements
+
 2017/08/18 MicroTESK 2.4.32 beta
 
  - Support for revisions in nML and MMU specifications
