--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/09/01 MicroTESK 2.4.34 beta
+
+ - Bug fixes and general improvements
+
 2017/08/25 MicroTESK 2.4.33 beta
 
  - Support for configuration files describing relations between revisions
