--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2017/09/18 MicroTESK 2.4.37 beta
+
+- Bug fix in engine for constraint-based test data generation
+
 2017/09/15 MicroTESK 2.4.36 beta
 
 - Enhancements in the branch engine
