Minor documentation restructurization.
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>

--- a/xdocs/user-guide/core/test/src/MicroTESK.TestGuide.tex
+++ b/xdocs/user-guide/core/test/src/MicroTESK.TestGuide.tex
@@ -63,7 +63,7 @@
 \footnotesize
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{\baselineskip}
-\textcopyright{} Institute for System Programming of the Russian Academy of Sciences (ISP RAS)\\
+\textcopyright{} Ivannikov Institute for System Programming of the Russian Academy of Sciences (ISP RAS)\\
 All rights reserved
 \endgroup
 \clearpage
@@ -85,11 +85,21 @@ All rights reserved
 \pagenumbering{arabic}
 \mainmatter
 
+\chapter{Overview}
 \include{overview}
+
+\chapter{Basic Functions}
 \include{utils}
+
+\chapter{Sequence Control}
 \include{sequence}
+
+\chapter{Data Control}
 \include{data}
-\include{engines}
+
+\chapter{Test Engines}
+\include{branch}
+
 \include{memconfig}
 \include{biblio}
 
