--- a/xdocs/user-guide/core/test/src/branch.tex
+++ b/xdocs/user-guide/core/test/src/branch.tex
@@ -1,5 +1,3 @@
-\chapter{Test Engines}
-
 \section{Branch Engine}
 
 \subsection{Parameters}
@@ -106,7 +104,7 @@ To guide the trace enumeration process, the following parameters are used:
 \item
 $branch\_exec\_limit$ specifies the maximum number of occurrences of an if or goto element in an execution trace:
   \begin{itemize}
-  \item a trace, where there exists an index $i$, such that $op_i \in \{if, goto\}$ and the number of $i$â€™s occurrences is greater than $branch\_exec\_limit$, is rejected;
+  \item a trace, where there exists an index $i$, such that $op_i \in \{if, goto\}$ and the number of $i$’s occurrences is greater than $branch\_exec\_limit$, is rejected;
   \item the default value is $1$.
   \end{itemize}
 \item
