User guide: test engine composition.
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>

--- a/xdocs/user-guide/plugins/memory/src/MicroTESK.MmuGuide.tex
+++ b/xdocs/user-guide/plugins/memory/src/MicroTESK.MmuGuide.tex
@@ -63,7 +63,7 @@
 \footnotesize
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{\baselineskip}
-\textcopyright{} Institute for System Programming of the Russian Academy of Sciences (ISP RAS)\\
+\textcopyright{} Ivannikov Institute for System Programming of the Russian Academy of Sciences\\
 All rights reserved
 \endgroup
 \clearpage
