--- a/xdocs/user-guide/core/test/src/MicroTESK.TestGuide.tex
+++ b/xdocs/user-guide/core/test/src/MicroTESK.TestGuide.tex
@@ -7,6 +7,9 @@
 \usepackage{memsty}
 \usepackage{listings}
 
+\usepackage{graphicx}
+\graphicspath{ {figures/} }
+
 % Heading style
 \headstyles{memman}
 \settocdepth{subsection}
@@ -63,7 +66,7 @@
 \footnotesize
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{\baselineskip}
-\textcopyright{} Ivannikov Institute for System Programming of the Russian Academy of Sciences (ISP RAS)\\
+\textcopyright{} Ivannikov Institute for System Programming of the Russian Academy of Sciences\\
 All rights reserved
 \endgroup
 \clearpage
@@ -98,7 +101,8 @@ All rights reserved
 \include{data}
 
 \chapter{Test Engines}
-\include{branch}
+\include{engine_composition}
+\include{engine_branch}
 
 \include{memconfig}
 \include{biblio}
