--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,19 @@
  2016/10/28 MicroTESK 2.4
 --------------------------------------------------------------------------------
 
+2018/05/04 MicroTESK 2.4.40 beta
+
+ - Support for automated generation of test templates
+ - Templates: methods 'rev_id' and 'is_rev' to get information on revisions
+   supported by the model
+ - Templates: support for global labels (the 'global_label' method)
+ - Templates: support for numeric labels
+ - Templates: support for weak symbols (the 'weak' method)
+ - Templates: new method set_default_mode_allocator(allocator)
+ - Templates: runtime methods to trace the state of registers and memory
+   (instead of hand-written observers)
+ - Bug fixes and code improvements
+
 2018/02/19 MicroTESK 2.4.39 beta
 
  - Test data iterator functionality was implemented
