--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
 2018/07/25 MicroTESK 2.4.42 beta
   - Improved template facilities: support for addressing modes (registers)
     in printing functions (such as 'trace')
+  - Improved template facilities: support for the '_SLL' operation
   - Improved register allocation: support for the 'retain' attribute
 
 2018/07/19 MicroTESK 2.4.41 beta
